Added metamorphic tests

--- a/Project/onnx-example-main/bad_model_onyx.ipynb
+++ b/Project/onnx-example-main/bad_model_onyx.ipynb
@@ -482,6 +482,239 @@
     "plt.title('Confusion Matrix')\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "c42c6a35",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean likelihood for 0 developments in PLA history: 0.24792436153060837\n",
+      "Mean likelihood for 25 developments in PLA history: 0.1107785241326182\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Metamorphic testing: (Other than fairness testing)\n",
+    "# If a value changes then the prediction likelihood should change too in line with the purpose of the model\n",
+    "# pla_historie_ontwikkeling 0 or 25 // number of developments in PLA history\n",
+    "\n",
+    "# Load the model\n",
+    "testing_session = rt.InferenceSession(\"model/bad_model.onnx\")\n",
+    "\n",
+    "\n",
+    "# Initialize variables to store likelihoods\n",
+    "likelihoods_0 = []\n",
+    "likelihoods_25 = []\n",
+    "\n",
+    "# Iterate through each sample in the test set\n",
+    "for index, row in X_test.iterrows():\n",
+    "    # Convert the row to a DataFrame to ensure it's a DataFrame object\n",
+    "    X_sample = pd.DataFrame(row).transpose()\n",
+    "\n",
+    "    # Make predictions for 0 developments in PLA history\n",
+    "    X_sample_0 = X_sample.copy()\n",
+    "    X_sample_0['pla_historie_ontwikkeling'] = 0\n",
+    "    y_proba_0 = testing_session.run(\n",
+    "        None, {'X': X_sample_0.values.astype(np.float32)})[1][0]\n",
+    "\n",
+    "    # Make predictions for 25 developments in PLA history\n",
+    "    X_sample_25 = X_sample.copy()\n",
+    "    X_sample_25['pla_historie_ontwikkeling'] = 25\n",
+    "    y_proba_25 = testing_session.run(\n",
+    "        None, {'X': X_sample_25.values.astype(np.float32)})[1][0]\n",
+    "\n",
+    "    # Append the likelihoods for both age groups\n",
+    "    # Probability of class 1 (fraud) for 0 developments in PLA history\n",
+    "    likelihoods_0.append([y_proba_0[1]])\n",
+    "    # Probability of class 1 (fraud) for 25 developments in PLA history\n",
+    "    likelihoods_25.append([y_proba_25[1]])\n",
+    "\n",
+    "# Convert likelihoods lists to NumPy arrays\n",
+    "likelihoods_0 = np.array(likelihoods_0)\n",
+    "likelihoods_25 = np.array(likelihoods_25)\n",
+    "\n",
+    "# Calculate the mean likelihoods for each group\n",
+    "mean_likelihood_0 = np.mean(likelihoods_0)\n",
+    "mean_likelihood_25 = np.mean(likelihoods_25)\n",
+    "\n",
+    "print(\"Mean likelihood for 0 developments in PLA history:\", mean_likelihood_0)\n",
+    "print(\"Mean likelihood for 25 developments in PLA history:\", mean_likelihood_25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "a4bf338a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean likelihood for a client that has shown up for meetings: 0.1392462257855578\n",
+      "Mean likelihood for no show client: 0.17617668921702376\n"
+     ]
+    }
+   ],
+   "source": [
+    "# contacten_onderwerp_no_show // Contact subject client has not shown up for meeting\n",
+    "likelihoods_show = []\n",
+    "likelihoods_noshow = []\n",
+    "\n",
+    "# Iterate through each sample in the test set\n",
+    "for index, row in X_test.iterrows():\n",
+    "    # Convert the row to a DataFrame to ensure it's a DataFrame object\n",
+    "    X_sample = pd.DataFrame(row).transpose()\n",
+    "\n",
+    "    # Make predictions for a client that has shown up for meetings\n",
+    "    X_sample_show = X_sample.copy()\n",
+    "    X_sample_show['contacten_onderwerp_no_show'] = 0.0\n",
+    "    y_proba_show = testing_session.run(\n",
+    "        None, {'X': X_sample_show.values.astype(np.float32)})[1][0]\n",
+    "\n",
+    "    # Make predictions for no show client\n",
+    "    X_sample_noshow = X_sample.copy()\n",
+    "    X_sample_noshow['contacten_onderwerp_no_show'] = 1.0\n",
+    "    y_proba_noshow = testing_session.run(\n",
+    "        None, {'X': X_sample_noshow.values.astype(np.float32)})[1][0]\n",
+    "\n",
+    "    # Append the likelihoods for both age groups\n",
+    "    # Probability of class 1 (fraud) for a client that has shown up for meetings\n",
+    "    likelihoods_show.append([y_proba_show[1]])\n",
+    "    # Probability of class 1 (fraud) for no show client\n",
+    "    likelihoods_noshow.append([y_proba_noshow[1]])\n",
+    "\n",
+    "# Convert likelihoods lists to NumPy arrays\n",
+    "likelihoods_show = np.array(likelihoods_show)\n",
+    "likelihoods_noshow = np.array(likelihoods_noshow)\n",
+    "\n",
+    "# Calculate the mean likelihoods for each group\n",
+    "mean_likelihood_show = np.mean(likelihoods_show)\n",
+    "mean_likelihood_noshow = np.mean(likelihoods_noshow)\n",
+    "\n",
+    "print(\"Mean likelihood for a client that has shown up for meetings:\",\n",
+    "      mean_likelihood_show)\n",
+    "print(\"Mean likelihood for no show client:\", mean_likelihood_noshow)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "3d3d2b4b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean likelihood for a client without an activated instrument ladder: 0.2174352359677458\n",
+      "Mean likelihood for a client with an activated instrument ladder: 0.1658243653073232\n"
+     ]
+    }
+   ],
+   "source": [
+    "# instrument_ladder_huidig_activering // instrument ladder is currently activated\n",
+    "likelihoods_notactivated = []\n",
+    "likelihoods_activated = []\n",
+    "\n",
+    "# Iterate through each sample in the test set\n",
+    "for index, row in X_test.iterrows():\n",
+    "    # Convert the row to a DataFrame to ensure it's a DataFrame object\n",
+    "    X_sample = pd.DataFrame(row).transpose()\n",
+    "\n",
+    "    # Make predictions for a client without an activated instrument ladder\n",
+    "    X_sample_notactivated = X_sample.copy()\n",
+    "    X_sample_notactivated['instrument_ladder_huidig_activering'] = 0.0\n",
+    "    y_proba_notactivated = testing_session.run(\n",
+    "        None, {'X': X_sample_notactivated.values.astype(np.float32)})[1][0]\n",
+    "\n",
+    "    # Make predictions for a client with an activated instrument ladder\n",
+    "    X_sample_activated = X_sample.copy()\n",
+    "    X_sample_activated['instrument_ladder_huidig_activering'] = 1.0\n",
+    "    y_proba_activated = testing_session.run(\n",
+    "        None, {'X': X_sample_activated.values.astype(np.float32)})[1][0]\n",
+    "\n",
+    "    # Append the likelihoods for both age groups\n",
+    "    # Probability of class 1 (fraud) for a client without an activated instrument ladder\n",
+    "    likelihoods_notactivated.append([y_proba_notactivated[1]])\n",
+    "    # Probability of class 1 (fraud) for a client with an activated instrument ladder\n",
+    "    likelihoods_activated.append([y_proba_activated[1]])\n",
+    "\n",
+    "# Convert likelihoods lists to NumPy arrays\n",
+    "likelihoods_notactivated = np.array(likelihoods_notactivated)\n",
+    "likelihoods_activated = np.array(likelihoods_activated)\n",
+    "\n",
+    "# Calculate the mean likelihoods for each group\n",
+    "mean_likelihood_notactivated = np.mean(likelihoods_notactivated)\n",
+    "mean_likelihood_activated = np.mean(likelihoods_activated)\n",
+    "\n",
+    "print(\"Mean likelihood for a client without an activated instrument ladder:\",\n",
+    "      mean_likelihood_notactivated)\n",
+    "print(\"Mean likelihood for a client with an activated instrument ladder:\",\n",
+    "      mean_likelihood_activated)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "9d696384",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean likelihood for a client without a successful instrumentation history: 0.22765170715851032\n",
+      "Mean likelihood for a client with a successful instrumentation history: 0.2037001390366311\n"
+     ]
+    }
+   ],
+   "source": [
+    "# instrument_reden_beeindiging_historie_succesvol // successful instrumentation history\n",
+    "likelihoods_not = []\n",
+    "likelihoods_successful = []\n",
+    "\n",
+    "# Iterate through each sample in the test set\n",
+    "for index, row in X_test.iterrows():\n",
+    "    # Convert the row to a DataFrame to ensure it's a DataFrame object\n",
+    "    X_sample = pd.DataFrame(row).transpose()\n",
+    "\n",
+    "    # Make predictions for a client without a successful instrumentation history\n",
+    "    X_sample_not = X_sample.copy()\n",
+    "    X_sample_not['instrument_reden_beeindiging_historie_succesvol'] = 0.0\n",
+    "    y_proba_not = testing_session.run(\n",
+    "        None, {'X': X_sample_not.values.astype(np.float32)})[1][0]\n",
+    "\n",
+    "    # Make predictions for a client with a successful instrumentation history\n",
+    "    X_sample_successful = X_sample.copy()\n",
+    "    X_sample_successful['instrument_reden_beeindiging_historie_succesvol'] = 1.0\n",
+    "    y_proba_successful = testing_session.run(\n",
+    "        None, {'X': X_sample_successful.values.astype(np.float32)})[1][0]\n",
+    "\n",
+    "    # Append the likelihoods for both age groups\n",
+    "    # Probability of class 1 (fraud) for a client without a successful instrumentation history\n",
+    "    likelihoods_not.append([y_proba_not[1]])\n",
+    "    # Probability of class 1 (fraud) for a client with a successful instrumentation history\n",
+    "    likelihoods_successful.append([y_proba_successful[1]])\n",
+    "\n",
+    "# Convert likelihoods lists to NumPy arrays\n",
+    "likelihoods_not = np.array(likelihoods_not)\n",
+    "likelihoods_successful = np.array(likelihoods_successful)\n",
+    "\n",
+    "# Calculate the mean likelihoods for each group\n",
+    "mean_likelihood_not = np.mean(likelihoods_not)\n",
+    "mean_likelihood_successful = np.mean(likelihoods_successful)\n",
+    "\n",
+    "print(\"Mean likelihood for a client without a successful instrumentation history:\",\n",
+    "      mean_likelihood_not)\n",
+    "print(\"Mean likelihood for a client with a successful instrumentation history:\",\n",
+    "      mean_likelihood_successful)"
+   ]
   }
  ],
  "metadata": {
