Add stochastic hill climber for multiple tests

--- a/Project/onnx-example-main/bad_model_onyx_daniela.ipynb
+++ b/Project/onnx-example-main/bad_model_onyx_daniela.ipynb
@@ -1084,7 +1084,112 @@
     "is_executing": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Load the model\n",
+    "new_session = rt.InferenceSession(\"model/bad_model.onnx\")\n",
+    "\n",
+    "def get_predict_label_and_confidence(session, solution):\n",
+    "    y_pred_solution = session.run(None, {'X': solution.astype(np.float32)})\n",
+    "\n",
+    "    # Predict checked or not checked\n",
+    "    label = y_pred_solution[0][0]\n",
+    "    \n",
+    "    # Only have two classes: checked and not checked\n",
+    "    confidence_top1_label = y_pred_solution[1][0][0]\n",
+    "    confidence_top2_label = y_pred_solution[1][0][1]\n",
+    "    \n",
+    "    return (label, confidence_top1_label, confidence_top2_label)\n",
+    "\n",
+    "\n",
+    "def get_mean_and_variance(X_test):\n",
+    "    mean = np.mean(X_test)\n",
+    "    variance = np.var(X_test)\n",
+    "    \n",
+    "    return mean, variance\n",
+    "\n",
+    "\n",
+    "def get_fitness(y_true, y_pred): \n",
+    "    # Get the predicted label and confidence\n",
+    "    label_original = y_true\n",
+    "    label_mutated, confidence_top1_label, confidence_top2_label = y_pred\n",
+    "    \n",
+    "    # If the prediction is different from the true label: fitness = - confidence_top1_label\n",
+    "    # If the prediction is the same as the true label: fitness = confidence_top1_label - confidence_top2_label    \n",
+    "    return -confidence_top1_label if label_mutated != label_original else confidence_top1_label - confidence_top2_label\n",
+    "\n",
+    "\n",
+    "def random_gaussian_mutation(solution, mutation_rate, mean, variance):\n",
+    "    mutated_solution = solution.copy()\n",
+    "    num_features = len(mutated_solution)\n",
+    "    num_mutations = max(1, int(mutation_rate * num_features))\n",
+    "    \n",
+    "    # Mutate a random subset of the features\n",
+    "    for _ in range(num_mutations):\n",
+    "        feature_index = np.random.randint(num_features)\n",
+    "        mutation_value = np.random.normal(loc=mean, scale=np.sqrt(variance))\n",
+    "        mutated_solution[feature_index] += mutation_value\n",
+    "\n",
+    "    return mutated_solution\n",
+    "\n",
+    "\n",
+    "def stochastic_hill_climber(initial_solution, session, y_test_sample, mean, variance, num_iterations=10000, num_neighbors=10, mutation_rate=0.1):\n",
+    "    \n",
+    "    current_solution = initial_solution\n",
+    "    current_fitness = get_fitness(y_test_sample, get_predict_label_and_confidence(session, current_solution))\n",
+    "    \n",
+    "    for _ in range(num_iterations):\n",
+    "        neighbors = [random_gaussian_mutation(current_solution, mutation_rate, mean, variance) for _ in range(num_neighbors)]\n",
+    "        neighbor_scores = [get_fitness(y_test_sample, get_predict_label_and_confidence(session, neighbor)) for neighbor in neighbors]\n",
+    "        \n",
+    "        # Minimize the objective function\n",
+    "        best_neighbor_index = np.argmin(neighbor_scores)\n",
+    "        best_neighbor_score = neighbor_scores[best_neighbor_index]\n",
+    "        \n",
+    "        # Check if the best neighbor is better than the current solution\n",
+    "        if best_neighbor_score < current_fitness:\n",
+    "            current_solution = neighbors[best_neighbor_index]\n",
+    "            current_fitness = best_neighbor_score\n",
+    "    \n",
+    "    return current_solution, current_fitness\n",
+    "\n",
+    "best_solutions_scores = []\n",
+    "global_best_score = None\n",
+    "\n",
+    "# Get random samples from the test set\n",
+    "subset_indices = np.random.choice(len(X_test), size=100, replace=False)\n",
+    "X_test_subset = X_test.iloc[subset_indices]\n",
+    "y_test_subset = y_test.iloc[subset_indices]\n",
+    "\n",
+    "mean, variance = get_mean_and_variance(X_test)\n",
+    "\n",
+    "for X_test_sample, y_test_sample in zip(X_test_subset.values, y_test_subset.values):\n",
+    "\n",
+    "    # Take the first sample from the training set as the initial solution\n",
+    "    initial_solution = X_test_sample.reshape(1, -1)\n",
+    "\n",
+    "    # Run the algorithm\n",
+    "    final_solution, best_score = stochastic_hill_climber(initial_solution, new_session, y_test_sample, mean, variance, num_iterations=1000, num_neighbors=10, mutation_rate=0.2)\n",
+    "\n",
+    "    best_solutions_scores.append((X_test_sample, y_test_sample, final_solution, best_score))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b091df70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for (x_sample, y_sample, solution, o_solution) in best_solutions_scores:\n",
+    "    print(\"Original solution:\", x_sample)\n",
+    "    print(\"Original label:\", y_sample)\n",
+    "    print(\"Mutated solution:\", solution)\n",
+    "    print(\"Fitness:\", o_solution)\n",
+    "    global_best_score = o_solution if global_best_score is None else min(global_best_score, o_solution)\n",
+    "    \n",
+    "print(\"Global best score:\", global_best_score)\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
